--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 
                 <div class="hero-meta">
                     <div class="author-img">ME</div> <div class="author-text">
-                        <h4>[Insert Your Name]</h4> 
+                        <h4>[ANEEK PAL]</h4> 
                         <p>Founder & CEO • 8 min read</p>
                     </div>
                 </div>
