--- a/thank-you.html
+++ b/thank-you.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thank You | Stratify</title>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            background: #F8FAFC;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            color: #0F172A;
+        }
+        .card {
+            background: white;
+            padding: 3rem;
+            border-radius: 16px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+            max-width: 400px;
+        }
+        h1 { color: #3B82F6; margin-bottom: 1rem; }
+        p { color: #64748B; margin-bottom: 2rem; }
+        .btn {
+            background: #3B82F6;
+            color: white;
+            padding: 12px 24px;
+            text-decoration: none;
+            border-radius: 99px;
+            font-weight: 600;
+        }
+        .btn:hover { background: #2563EB; }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <h1>🎉 You're In!</h1>
+        <p>Thanks for subscribing. We've sent the Free Strategy Guide to your inbox.</p>
+        <a href="index.html" class="btn">Back to Home</a>
+    </div>
+</body>
+</html>
