--- a/index.html
+++ b/index.html
@@ -462,16 +462,19 @@
     <p>Get a custom roadmap to double your leads in 90 days.</p>
     
     <form action="https://formspree.io/f/xojjqnog" method="POST">
-        <ul class="cta-list">
-            <li><span class="check-icon">✔</span> Full Funnel Audit</li>
-            <li><span class="check-icon">✔</span> Competitor Analysis</li>
-            <li><span class="check-icon">✔</span> 30-Day Growth Plan</li>
-        </ul>
+    <ul class="cta-list">
+        <li><span class="check-icon">✔</span> Full Funnel Audit</li>
+        <li><span class="check-icon">✔</span> Competitor Analysis</li>
+    </ul>
 
-        <input type="email" name="email" placeholder="Your best email address..." style="width: 100%; padding: 12px; margin-bottom: 12px; border: 1px solid #E2E8F0; border-radius: 99px; text-align: center; font-size: 0.9rem;" required>
+    <input type="text" name="name" placeholder="Your Full Name" style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #E2E8F0; border-radius: 8px; font-size: 0.9rem;" required>
 
-        <button type="submit" class="btn btn-primary full-width-btn">Get Free Strategy Plan</button>
-    </form>
+    <input type="tel" name="phone" placeholder="Phone Number (WhatsApp)" style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #E2E8F0; border-radius: 8px; font-size: 0.9rem;" required>
+
+    <input type="email" name="email" placeholder="Business Email Address" style="width: 100%; padding: 12px; margin-bottom: 15px; border: 1px solid #E2E8F0; border-radius: 8px; font-size: 0.9rem;" required>
+
+    <button type="submit" class="btn btn-primary full-width-btn">Get Free Strategy Plan</button>
+</form>
 </div>
         </aside>
 
