--- a/index.html
+++ b/index.html
@@ -455,6 +455,20 @@
             <div class="highlight-box">
                 <strong>Final Thought:</strong> Optimization is a journey, not a destination. Start with one of these tips today and watch your numbers grow.
             </div>
+    <hr style="margin: 3rem 0; border-top: 1px solid #e2e8f0;">
+
+            <h2 id="expertise">Our Expertise</h2>
+            <p>We specialize in CRO, Funnel Optimization, and Data Analytics to scale 7-figure brands.</p>
+
+            <h2 id="case-studies">Case Studies</h2>
+            <p>See how we helped Client X double their revenue in 90 days.</p>
+
+            <h2 id="pricing">Pricing Plans</h2>
+            <p>Strategy Audits start at $500. Retainers start at $2000/mo.</p>
+
+         
+
+
         </article>
         <aside class="sidebar">
            <div class="sidebar-sticky">
