--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
                 </div>
             </div>
             
-            <div class="hero-visual">
-    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="Growth Strategy" style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 20px 40px rgba(0,0,0,0.1);">
-</div>
+           <div class="hero-visual">
+    <img src="dashboard.png" alt="Stratify Analytics Dashboard" style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 20px 50px rgba(0,0,0,0.3);">
+</div> 
         </div>
     </section>
 
