--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
                 </div>
             </div>
             
-           <div class="hero-visual">
-    <img src="dashboard.png" alt="Stratify Analytics Dashboard" style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 20px 50px rgba(0,0,0,0.3);">
-</div> 
+         <div class="hero-visual">
+    <img src="dashboard.png" alt="Stratify Dashboard" style="width: 85%; max-width: 500px; height: auto; display: block; margin: 0 auto; border-radius: 12px; box-shadow: 0 20px 50px rgba(0,0,0,0.2);">
+</div>
         </div>
     </section>
 
