--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
         </article>
         <aside class="sidebar">
-           <div class="sidebar-sticky">
+          <div class="sidebar-sticky" id="contact"> 
     <span class="sidebar-badge">Limited Slots</span>
     <h3>Scale With Stratify</h3>
     <p>Get a custom roadmap to double your leads in 90 days.</p>
