--- a/index.html
+++ b/index.html
@@ -413,9 +413,11 @@ footer .text-muted {
                 <h1 class="hero-title">15 Strategies to <span class="text-gradient">Explode Your Conversion Rates</span> in 2026</h1>
                 
                 <div class="hero-meta">
-                    <div class="author-img">ME</div> <div class="author-text">
+                   <img src="profile.jpg" alt="Aneek Pal" class="rounded-circle me-3" width="55" height="55" style="object-fit: cover; border: 2px solid #4da6ff;">
+                    
+                    <div class="author-text">
                         <h4> ANEEK PAL </h4> 
-                        <p>Founder & CEO • 8 min read</p>
+                        <p>Founder & CEO • 5 min read</p>
                     </div>
                 </div>
             </div>
