--- a/index.html
+++ b/index.html
@@ -429,7 +429,11 @@ footer .text-muted {
             </div>
             
          <div class="hero-visual">
-    <img src="dashboard.png" alt="Stratify Dashboard" style="width: 85%; max-width: 500px; height: auto; display: block; margin: 0 auto; border-radius: 12px; box-shadow: 0 20px 50px rgba(0,0,0,0.2);">
+<img src="dashboard-new.png" 
+     alt="Stratify Dashboard" 
+     style="width: 100%; max-width: 600px; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);"
+     oncontextmenu="return false;" 
+     draggable="false">
 </div>
         </div>
     </section>
