--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@ footer .text-muted {
             </div>
             
          <div class="hero-visual">
-<img src="dashboard-new.png" 
+<img src="dashboard.png" 
      alt="Stratify Dashboard" 
-     style="width: 100%; max-width: 600px; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);"
+     style="width: 85%; max-width: 600px; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);"
      oncontextmenu="return false;" 
      draggable="false">
 </div>
