--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ footer .text-muted {
         </div>
     </div>
 </footer>
-<a href="https://wa.me/+919X7X5X3X1X" target="_blank" style="position:fixed; bottom:20px; right:20px; z-index:1000;">
+<a href="https://wa.me/919999999999" target="_blank" style="position:fixed; bottom:20px; right:20px; z-index:1000;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="60" alt="Chat on WhatsApp">
     </a>
 </body>
