--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stratify | Scale Your Revenue with Data-Driven Funnels</title>
+   <title>Stratify | Data-Driven Growth Strategies for Business</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 font-weight=%22bold%22 fill=%22%233B82F6%22>S</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -511,7 +511,7 @@ footer .text-muted {
             <p>We specialize in CRO, Funnel Optimization, and Data Analytics to scale 7-figure brands.</p>
 
             <h2 id="case-studies">Case Studies</h2>
-            <p>See how we helped Client X double their revenue in 90 days.</p>
+            <p>See how we helped a <strong>FinTech Startup</strong> double their revenue in 90 days.</p>
 
             <h2 id="pricing">Pricing Plans</h2>
             <p>Strategy Audits start at $500. Retainers start at $2000/mo.</p>
