--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy & Terms - Stratify</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #0f172a; /* Wahi Dark Blue Theme */
+            color: #e2e8f0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .legal-container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 30px;
+            background: #1e293b;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+        }
+        h1, h2 { color: #3b82f6; margin-top: 20px;}
+        a { color: #3b82f6; text-decoration: none; }
+        .back-btn {
+            display: inline-block;
+            margin-bottom: 20px;
+            padding: 10px 20px;
+            background-color: #3b82f6;
+            color: white;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .back-btn:hover { background-color: #2563eb; color: white; }
+    </style>
+</head>
+<body>
 
+    <div class="container">
+        <div class="legal-container">
+            <a href="index.html" class="back-btn">← Back to Home</a>
+
+            <h1>Privacy Policy & Terms</h1>
+            <p class="text-muted">Last Updated: January 2026</p>
+            <hr class="border-secondary">
+
+            <h2>1. Privacy Policy</h2>
+            <p>At Stratify, we respect your privacy. This policy explains how we handle your information.</p>
+            <ul>
+                <li><strong>Information Collection:</strong> We collect your name, email, and phone number only when you voluntarily fill out our contact form.</li>
+                <li><strong>Usage:</strong> We use this data solely to contact you regarding our strategies and services. We do not sell your data to third parties.</li>
+                <li><strong>Cookies:</strong> Our website may use standard cookies to improve user experience.</li>
+            </ul>
+
+            <h2>2. Terms of Service</h2>
+            <p>By using this website, you agree to the following terms:</p>
+            <ul>
+                <li><strong>Educational Purpose:</strong> All content provided by Stratify is for educational and informational purposes only.</li>
+                <li><strong>No Guarantees:</strong> Business and trading involve risk. We do not guarantee specific financial results or profits. Past performance does not guarantee future success.</li>
+                <li><strong>Intellectual Property:</strong> The content, design, and strategies on this site are owned by Stratify. Copying them without permission is prohibited.</li>
+            </ul>
+
+            <h2>3. Contact Us</h2>
+            <p>If you have any questions, please contact us via the form on our homepage.</p>
+            
+            <hr class="border-secondary mt-5">
+            <p class="text-center small text-muted">&copy; 2026 Stratify Inc. All rights reserved.</p>
+        </div>
+    </div>
+
+</body>
+</html>
