--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@ footer .text-muted {
                 <ul class="list-unstyled">
                     <li><a href="#" class="text-light text-decoration-none">Home</a></li>
                     <li><a href="#case-studies" class="text-light text-decoration-none">Case Studies</a></li>
-                    <li><a href="#" class="text-light text-decoration-none">Privacy Policy</a></li>
-                    <li><a href="#" class="text-light text-decoration-none">Terms of Service</a></li>
+                   <li><a href="privacy.html" class="text-light text-decoration-none">Privacy Policy</a></li>
+<li><a href="privacy.html" class="text-light text-decoration-none">Terms of Service</a></li>
                 </ul>
             </div>
 
