--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta property="og:title" content="Stratify | Data-Driven Growth Strategies">
+<meta property="og:description" content="Stop guessing. Get a free audit and scale your trading business with data-driven funnels.">
+<meta property="og:image" content="https://aneekpal.github.io/dashboard.png">
+<meta property="og:url" content="https://aneekpal.github.io">
+<meta name="twitter:card" content="summary_large_image">
     <style>
         /* ========================================
            PREMIUM THEME VARIABLES
